# ears

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/actions/: setup.yaml
.github/workflows/: core.yaml  deploy.yaml  functions.yaml  infracost.yaml  main.yaml  publish.yaml  tests.yaml
docs/beatport/: beatport.md  search.json
docs/drawio/: slack.drawio
ears/: events.py  handlers.py  messaging.py  models.py  protocol.py  types.py
ears/providers/: __init__.py  beatport.py  deezer.py
functions/: .gitignore  Makefile
functions/beatport/: main.py  models.py  transport.py
functions/deezer/: main.py  requirements.txt
functions/matching/: main.py
functions/slack/: commands.py  interactions.py  main.py  matching.py  messaging.py  notifications.py  providers.py  requirements.txt  router.py  utils.py
functions/slack-v1/: requirements.txt
functions/slack-v2/: main.py  requirements.txt
scripts/: beatport.py  deezer.py
src/: __main__.py  settings.py
src/models/: beatport.py
src/providers/: beatport.py  deezer.py
terraform/: functions.tf  iam.tf  main.tf  outputs.tf  providers.tf  pubsub.tf  secrets.tf  storage.tf  variables.tf
terraform/loadbalancer/: urlmap.tf  variables.tf
terraform/matching/: iam.tf  outputs.tf  variables.tf  workflows.tf
terraform/project/: main.tf  versions.tf
terraform/slack/: functions.tf  main.tf  pubsub.tf  secrets.tf
tests/: conftest.py  test_handlers.py  test_messaging.py  test_providers_beatport.py  test_providers_deezer.py
workflows/: matching-beatport.yaml
(+84 files in other folders)
