[tool.poetry]
name = "ears"
version = "0.1.0"
description = "Easy Acquisition of Retained Sounds"
authors = ["Félix Voituret <fvoituret@deezer.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
