[tool.poetry]
name = "ears"
version = "0.1.0"
description = ""
authors = ["Félix Voituret <fvoituret@deezer.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.6.1"
fastapi = "^0.85.0"
httpx = "^0.23.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
