[tool.poetry]
name = "ears"
version = "0.1.0"
description = ""
authors = ["Félix Voituret <fvoituret@deezer.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.0"
google-cloud-pubsub = "^2.13.7"
pydantic = "^1.10.2"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
